--- a/index.html
+++ b/index.html
@@ -7,6 +7,102 @@
   <title>COMPOUND</title>
 
   <style>
+/* ===== PRODUCT TEE PREVIEW (TERMINAL STYLE) ===== */
+
+.tee {
+  position: relative;
+  width: min(360px, 90vw);
+  height: min(440px, 65vh);
+  margin-top: 14px;
+
+  border: 1px dashed rgba(57,255,20,.28);
+  border-radius: 16px;
+  background: rgba(57,255,20,.02);
+  overflow: hidden;
+
+  perspective: 1000px;
+  box-shadow:
+    0 0 0 2px rgba(57,255,20,.06),
+    0 24px 60px rgba(0,0,0,.6);
+}
+
+/* both faces */
+.teeFace {
+  position: absolute;
+  inset: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transform-style: preserve-3d;
+  transition: transform .55s ease, opacity .55s ease;
+  backface-visibility: hidden;
+
+  font-size: 12px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: rgba(57,255,20,.9);
+}
+
+/* scanline + matrix feel */
+.teeFace::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+  opacity: .18;
+  background:
+    repeating-linear-gradient(
+      to bottom,
+      rgba(57,255,20,.25) 0 1px,
+      transparent 1px 28px
+    ),
+    repeating-linear-gradient(
+      90deg,
+      rgba(57,255,20,.18) 0 1px,
+      transparent 1px 26px
+    );
+}
+
+/* front face */
+.teeFace.front {
+  background:
+    radial-gradient(circle at 50% 35%, rgba(57,255,20,.10), transparent 55%),
+    linear-gradient(to bottom, rgba(0,30,0,.35), rgba(0,0,0,.95));
+  transform: rotateY(0deg);
+  opacity: 1;
+}
+
+/* back face */
+.teeFace.back {
+  background:
+    radial-gradient(circle at 50% 35%, rgba(57,255,20,.10), transparent 55%),
+    linear-gradient(to bottom, rgba(0,18,0,.35), rgba(0,0,0,.95));
+  transform: rotateY(180deg);
+  opacity: 0;
+}
+
+/* hover flip */
+.tee:hover .teeFace.front {
+  transform: rotateY(180deg);
+  opacity: 0;
+}
+
+.tee:hover .teeFace.back {
+  transform: rotateY(0deg);
+  opacity: 1;
+}
+
+/* optional label inside face */
+.teeFace .tag {
+  position: absolute;
+  bottom: 12px;
+  right: 14px;
+  opacity: .55;
+  font-size: 11px;
+}
+
     :root {
       --green: #39ff14;
       --bg: #020402;
@@ -97,6 +193,25 @@
 </head>
 
 <body>
+<div class="tee" aria-label="T-shirt preview (hover to flip)">
+  <div class="teeFace front">
+    <svg viewBox="0 0 300 360" width="100%" height="100%">
+      <rect width="300" height="360" fill="#000"></rect>
+      <rect x="40" y="40" width="220" height="280" rx="18" fill="none" stroke="rgba(57,255,20,.6)" stroke-width="2"></rect>
+      <text x="150" y="180" text-anchor="middle" fill="rgba(57,255,20,.85)" font-size="14" letter-spacing="3">FRONT DESIGN</text>
+      <text x="150" y="205" text-anchor="middle" fill="rgba(57,255,20,.45)" font-size="11">compound_tee</text>
+    </svg>
+  </div>
+
+  <div class="teeFace back">
+    <svg viewBox="0 0 300 360" width="100%" height="100%">
+      <rect width="300" height="360" fill="#000"></rect>
+      <rect x="40" y="40" width="220" height="280" rx="18" fill="none" stroke="rgba(57,255,20,.6)" stroke-width="2"></rect>
+      <text x="150" y="180" text-anchor="middle" fill="rgba(57,255,20,.85)" font-size="14" letter-spacing="3">BACK DESIGN</text>
+      <text x="150" y="205" text-anchor="middle" fill="rgba(57,255,20,.45)" font-size="11">compound_tee</text>
+    </svg>
+  </div>
+</div>
 
 <!-- LOCK SCREEN -->
 <div id="lock">
